--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Index</h1>
-    <a href="estilos_embedados.html">Ejercicio 1</a>
-    <a href="ejemplo2.html">Ejercicio 2</a>
-    <a href="paises.html">Ejercicio 3</a>
-    <a href="avatar_thelastairbender.html">Ejercicio Complementario</a>
+    <p href="estilos_embedados.html">Ejercicio 1</p>
+    <p href="ejemplo2.html">Ejercicio 2</p>
+    <p href="paises.html">Ejercicio 3</p>
+    <p href="avatar_thelastairbender.html">Ejercicio Complementario</p>
 </body>
 </html>
