--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
     <h1>Index</h1>
-    <a href="estilos_embedados.html">Ejercicio 1</a>
-    <a href="ejemplo2.html">Ejercicio 2</a>
-    <a href="paises.html">Ejercicio 3</a>
-    <a href="avatar_thelastairbender.html">Ejercicio Complementario</a>
+    <ul>
+        <li><a href="estilos_embedados.html">Ejercicio 1</a></li>
+        <li><a href="ejemplo2.html">Ejercicio 2</a></li>
+        <li><a href="paises.html">Ejercicio 3</a></li>
+        <li><a href="avatar_thelastairbender.html">Ejercicio Complementario</a></li>
+    </ul>
+
+    <footer>
+        <p>Karla Melissa Torres Solórzano 20235722</p>
+    </footer>
 </body>
 </html>
